<?php

declare(strict_types=1);

namespace DoctrineMigrations;

use Doctrine\DBAL\Schema\Schema;
use Doctrine\Migrations\AbstractMigration;

/**
 * Auto-generated Migration: Please modify to your needs!
 */
final class Version20260305113958 extends AbstractMigration
{
    public function getDescription(): string
    {
        return '';
    }

    public function up(Schema $schema): void
    {
        // this up() migration is auto-generated, please modify it to your needs
        $this->addSql('CREATE TABLE body_type (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, name VARCHAR(255) NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE TABLE brand (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, name VARCHAR(60) NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_1C52F9585E237E06 ON brand (name)');
        $this->addSql('CREATE TABLE color (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, name VARCHAR(255) NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE TABLE customer (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, firstname VARCHAR(255) NOT NULL, lastname VARCHAR(255) NOT NULL, email VARCHAR(255) DEFAULT NULL, phone VARCHAR(20) DEFAULT NULL, address VARCHAR(255) DEFAULT NULL, client_number INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE TABLE feature (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, name VARCHAR(255) NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE TABLE fuel_type (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, name VARCHAR(255) NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE TABLE gear (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, type VARCHAR(255) NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE TABLE maintenance (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, description VARCHAR(255) NOT NULL, date TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, cost NUMERIC(10, 0) DEFAULT NULL, vehicle_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_2F84F8E9545317D1 ON maintenance (vehicle_id)');
        $this->addSql('CREATE TABLE model (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, name VARCHAR(100) NOT NULL, brand_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_D79572D944F5D008 ON model (brand_id)');
        $this->addSql('CREATE TABLE rental (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, startdate TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, end_date TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL, daily_rate NUMERIC(10, 0) NOT NULL, status VARCHAR(255) NOT NULL, vehicle_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_1619C27D545317D1 ON rental (vehicle_id)');
        $this->addSql('CREATE TABLE sale (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, price NUMERIC(10, 0) NOT NULL, date TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, vehicle_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_E54BC005545317D1 ON sale (vehicle_id)');
        $this->addSql('CREATE TABLE supplier (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, name VARCHAR(255) NOT NULL, address VARCHAR(255) DEFAULT NULL, city VARCHAR(100) DEFAULT NULL, postal_code VARCHAR(10) DEFAULT NULL, country VARCHAR(100) DEFAULT NULL, siret VARCHAR(20) DEFAULT NULL, email VARCHAR(180) DEFAULT NULL, phone VARCHAR(30) DEFAULT NULL, type VARCHAR(255) NOT NULL, average_delivery_delay INT DEFAULT NULL, rating NUMERIC(2, 1) DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_9B2A6C7E5E237E06 ON supplier (name)');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_9B2A6C7E26E94372 ON supplier (siret)');
        $this->addSql('CREATE TABLE "user" (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, email VARCHAR(180) NOT NULL, roles JSON NOT NULL, password VARCHAR(255) NOT NULL, is_verified BOOLEAN NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_IDENTIFIER_EMAIL ON "user" (email)');
        $this->addSql('CREATE TABLE variant (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, name VARCHAR(120) NOT NULL, model_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_F143BFAD7975B7E7 ON variant (model_id)');
        $this->addSql('CREATE TABLE vehicle (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, vehicle_model_id INT NOT NULL, color_id INT DEFAULT NULL, fuel_type_id INT DEFAULT NULL, gear_id INT DEFAULT NULL, supplier_id INT DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_1B80E486A467B873 ON vehicle (vehicle_model_id)');
        $this->addSql('CREATE INDEX IDX_1B80E4867ADA1FB5 ON vehicle (color_id)');
        $this->addSql('CREATE INDEX IDX_1B80E4866A70FE35 ON vehicle (fuel_type_id)');
        $this->addSql('CREATE INDEX IDX_1B80E48677201934 ON vehicle (gear_id)');
        $this->addSql('CREATE INDEX IDX_1B80E4862ADD6D8C ON vehicle (supplier_id)');
        $this->addSql('CREATE TABLE vehicle_feature (vehicle_id INT NOT NULL, feature_id INT NOT NULL, PRIMARY KEY (vehicle_id, feature_id))');
        $this->addSql('CREATE INDEX IDX_A42809545317D1 ON vehicle_feature (vehicle_id)');
        $this->addSql('CREATE INDEX IDX_A4280960E4B879 ON vehicle_feature (feature_id)');
        $this->addSql('CREATE TABLE vehicle_model (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, power_hp DOUBLE PRECISION DEFAULT NULL, power_fiscal DOUBLE PRECISION DEFAULT NULL, consumption DOUBLE PRECISION DEFAULT NULL, co2 DOUBLE PRECISION DEFAULT NULL, cnit VARCHAR(50) DEFAULT NULL, utac_code VARCHAR(50) DEFAULT NULL, homologation_date DATE DEFAULT NULL, variant_id INT NOT NULL, fuel_type_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_B53AF2353B69A9AF ON vehicle_model (variant_id)');
        $this->addSql('CREATE INDEX IDX_B53AF2356A70FE35 ON vehicle_model (fuel_type_id)');
        $this->addSql('CREATE TABLE messenger_messages (id BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL, body TEXT NOT NULL, headers TEXT NOT NULL, queue_name VARCHAR(190) NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, available_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, delivered_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_75EA56E0FB7336F0E3BD61CE16BA31DBBF396750 ON messenger_messages (queue_name, available_at, delivered_at, id)');
        $this->addSql('ALTER TABLE maintenance ADD CONSTRAINT FK_2F84F8E9545317D1 FOREIGN KEY (vehicle_id) REFERENCES vehicle (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE model ADD CONSTRAINT FK_D79572D944F5D008 FOREIGN KEY (brand_id) REFERENCES brand (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE rental ADD CONSTRAINT FK_1619C27D545317D1 FOREIGN KEY (vehicle_id) REFERENCES vehicle (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE sale ADD CONSTRAINT FK_E54BC005545317D1 FOREIGN KEY (vehicle_id) REFERENCES vehicle (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE variant ADD CONSTRAINT FK_F143BFAD7975B7E7 FOREIGN KEY (model_id) REFERENCES model (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE vehicle ADD CONSTRAINT FK_1B80E486A467B873 FOREIGN KEY (vehicle_model_id) REFERENCES vehicle_model (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE vehicle ADD CONSTRAINT FK_1B80E4867ADA1FB5 FOREIGN KEY (color_id) REFERENCES color (id)');
        $this->addSql('ALTER TABLE vehicle ADD CONSTRAINT FK_1B80E4866A70FE35 FOREIGN KEY (fuel_type_id) REFERENCES fuel_type (id)');
        $this->addSql('ALTER TABLE vehicle ADD CONSTRAINT FK_1B80E48677201934 FOREIGN KEY (gear_id) REFERENCES gear (id)');
        $this->addSql('ALTER TABLE vehicle ADD CONSTRAINT FK_1B80E4862ADD6D8C FOREIGN KEY (supplier_id) REFERENCES supplier (id)');
        $this->addSql('ALTER TABLE vehicle_feature ADD CONSTRAINT FK_A42809545317D1 FOREIGN KEY (vehicle_id) REFERENCES vehicle (id) ON DELETE CASCADE');
        $this->addSql('ALTER TABLE vehicle_feature ADD CONSTRAINT FK_A4280960E4B879 FOREIGN KEY (feature_id) REFERENCES feature (id) ON DELETE CASCADE');
        $this->addSql('ALTER TABLE vehicle_model ADD CONSTRAINT FK_B53AF2353B69A9AF FOREIGN KEY (variant_id) REFERENCES variant (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE vehicle_model ADD CONSTRAINT FK_B53AF2356A70FE35 FOREIGN KEY (fuel_type_id) REFERENCES fuel_type (id) NOT DEFERRABLE');
    }

    public function down(Schema $schema): void
    {
        // this down() migration is auto-generated, please modify it to your needs
        $this->addSql('ALTER TABLE maintenance DROP CONSTRAINT FK_2F84F8E9545317D1');
        $this->addSql('ALTER TABLE model DROP CONSTRAINT FK_D79572D944F5D008');
        $this->addSql('ALTER TABLE rental DROP CONSTRAINT FK_1619C27D545317D1');
        $this->addSql('ALTER TABLE sale DROP CONSTRAINT FK_E54BC005545317D1');
        $this->addSql('ALTER TABLE variant DROP CONSTRAINT FK_F143BFAD7975B7E7');
        $this->addSql('ALTER TABLE vehicle DROP CONSTRAINT FK_1B80E486A467B873');
        $this->addSql('ALTER TABLE vehicle DROP CONSTRAINT FK_1B80E4867ADA1FB5');
        $this->addSql('ALTER TABLE vehicle DROP CONSTRAINT FK_1B80E4866A70FE35');
        $this->addSql('ALTER TABLE vehicle DROP CONSTRAINT FK_1B80E48677201934');
        $this->addSql('ALTER TABLE vehicle DROP CONSTRAINT FK_1B80E4862ADD6D8C');
        $this->addSql('ALTER TABLE vehicle_feature DROP CONSTRAINT FK_A42809545317D1');
        $this->addSql('ALTER TABLE vehicle_feature DROP CONSTRAINT FK_A4280960E4B879');
        $this->addSql('ALTER TABLE vehicle_model DROP CONSTRAINT FK_B53AF2353B69A9AF');
        $this->addSql('ALTER TABLE vehicle_model DROP CONSTRAINT FK_B53AF2356A70FE35');
        $this->addSql('DROP TABLE body_type');
        $this->addSql('DROP TABLE brand');
        $this->addSql('DROP TABLE color');
        $this->addSql('DROP TABLE customer');
        $this->addSql('DROP TABLE feature');
        $this->addSql('DROP TABLE fuel_type');
        $this->addSql('DROP TABLE gear');
        $this->addSql('DROP TABLE maintenance');
        $this->addSql('DROP TABLE model');
        $this->addSql('DROP TABLE rental');
        $this->addSql('DROP TABLE sale');
        $this->addSql('DROP TABLE supplier');
        $this->addSql('DROP TABLE "user"');
        $this->addSql('DROP TABLE variant');
        $this->addSql('DROP TABLE vehicle');
        $this->addSql('DROP TABLE vehicle_feature');
        $this->addSql('DROP TABLE vehicle_model');
        $this->addSql('DROP TABLE messenger_messages');
    }
}
